# embedded-websocket

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: client.rs  client_async.rs  client_async_embedded_io_async.rs  client_full.rs  server.rs  server_async.rs  websocket_client.rs  websocket_server.rs
examples/client/: main.rs
examples/client_async/: compat.rs  main.rs
examples/common/: mod.rs
examples/server/: main.rs
examples/server_async/: compat.rs  main.rs
src/: base64.rs  client.rs  compat.rs  framer.rs  framer_async.rs  http.rs  lib.rs  random.rs  server.rs  websocket.rs
