[package]
name = "embedded-websocket"
version = "0.9.3"
authors = ["David Haig"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ninjasource/embedded-websockets.git"
description = "A lightweight websocket library for embedded systems (no_std)"
keywords = ["websockets", "websocket", "embedded", "no_std"]
categories = ["embedded", "no-std", "network-programming"]
readme = "README.md"

[dependencies]
sha1 = { version = "0.10.5", default-features = false }
heapless = { version = "0.7.16", default-features = false }
byteorder = { version = "1.4.3", default-features = false }
httparse = { version = "1.8.0", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
base64 = { version = "0.13.1", default-features = false }
futures = { version = "0.3.28", default-features = false }
embedded-io-async = { version = "0.5.0", default-features = false, optional = true}

[dev-dependencies]
rand = "0.8.5"
bytes = "1.4.0"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.8", features = ["net", "codec"] }
clap = { version = "3.0.0-beta.5", features = ["derive"] }
log = "0.4.14"
env_logger = "0.9.0"
static_cell = { version = "1.1", features = ["nightly"]}

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy.git"
package = "embassy-executor"
version = "0.3.0"
# rev = "f8299d10f7c0387416989e00acc02d99661537fb"
features = ["arch-std", "executor-thread", "log", "nightly", "integrated-timers"]

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy.git"
package = "embassy-time"
# rev = "a2c718f61c0587e19d10c5c86ff4cd79272e2b87"
features = ["log", "std", "nightly"]

[dependencies.embassy-net]
git = "https://github.com/embassy-rs/embassy.git"
package = "embassy-net"
version = "0.1.0"
# rev = "b5748524f86f809d9c8dc2c5b4bb3f07e55dbda1"
features = ["std", "nightly", "log", "medium-ethernet", "medium-ip", "tcp", "udp", "dns", "dhcpv4", "proto-ipv6"]

[dependencies.embassy-net-driver]
git = "https://github.com/embassy-rs/embassy.git"
package = "embassy-net-driver"
# rev = "83ff3cbc69875f93c5a9bb36825c12df39f04f71"

[dev-dependencies.embassy-net-tuntap]
git = "https://github.com/embassy-rs/embassy.git"
version = "0.1.0"
package = "embassy-net-tuntap"
# rev = "4d60c715e683aaadf25d9f066bde805c725fefb4"

# see readme for no_std support
[features]
default = ["std"]
# default = []
std = []
embedded-io-async = ["dep:embedded-io-async"]

[[example]]
name = "client_async_embedded_io_async"
path = "examples/client_async_embedded_io_async.rs"
required-features = ["embedded-io-async"]
